--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "animaisfantasticos",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf src/styles/style.css",
+    "build": "sass src/styles/style.scss src/styles/style.css --style=compressed",
+    "watch": "sass --watch src/styles/style.scss src/styles/style.css",
+    "build-and-watch": "npm run build && npm run watch"
   },
   "keywords": [],
   "author": "Thallis Matos",
